# photino.Native

./: .gitignore  CMakeLists.txt  Photino.Native.sln  README.md  azure-pipelines-photino.native-dev.yml  azure-pipelines-photino.native-prod.yml  azure-pipelines-photino.native-win.yml  makefile
Photino.Native/: Exports.cpp  Photino.Dialog.h  Photino.Errors.cpp  Photino.Errors.h  Photino.Linux.Dialog.cpp  Photino.Linux.Menu.cpp  Photino.Linux.Menu.h  Photino.Linux.cpp  Photino.Mac.AppDelegate.h  Photino.Mac.AppDelegate.mm  Photino.Mac.Dialog.mm  Photino.Mac.Menu.h  Photino.Mac.Menu.mm  Photino.Mac.NSWindowBorderless.h  Photino.Mac.NSWindowBorderless.mm  Photino.Mac.NavigationDelegate.h  Photino.Mac.NavigationDelegate.mm  Photino.Mac.UiDelegate.h  Photino.Mac.UiDelegate.mm  Photino.Mac.UrlSchemeHandler.h  Photino.Mac.UrlSchemeHandler.m  Photino.Mac.UrlSchemeHandler.mm  Photino.Mac.WindowDelegate.h  Photino.Mac.WindowDelegate.mm  Photino.Mac.mm  Photino.Menu.h  Photino.Native.nuspec  Photino.Native.rc  Photino.Native.vcxproj  Photino.Native.vcxproj.filters  Photino.Tests.cpp  Photino.Windows.DarkMode.cpp  Photino.Windows.DarkMode.h  Photino.Windows.Dialog.cpp  Photino.Windows.DpiHelp.cpp  Photino.Windows.DpiHelp.h  Photino.Windows.Menu.cpp  Photino.Windows.Menu.h  Photino.Windows.ToastHandler.h  Photino.Windows.cpp  (+12 more)
Photino.Test/: PhotiniDllImports.cs  Photino.Test.csproj  PhotinoDelegates.cs  PhotinoDllImports.cs  PhotinoNativeDelegates.cs  PhotinoNativeParameters.cs  PhotinoNetDelegates.cs  PhotinoParameters.cs  PhotinoWindow.NET.cs  Program.cs  binARM64Debugnet8.0  macos-webkit-preferences.jsonc
Photino.Test/Properties/: launchSettings.json
Photino.Test/wwwroot/: child.html  main.html  second.html
